First Revision - Basic Quote Display. No Container, No Buttons.

--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
     
 </head>
 <body>
-    <!-- Script -->
-    <script src="quotes.js"></script>
-    <script src="script.js"></script>
+
 
 
     <div class="quote-container" id="quote-container">
         <!--Quote-->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <span id="quote">Three things cannot be long hidden: the sun, the moon, and the truth.</span>
+            <span id="quote"></span>
         </div>
         <!--Author-->
         <div class="Author">
-
+            <span id="author"></span>
         </div>
     </div>
+    <!-- Script -->
+    <script src="quotes.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
