--- a/index.html
+++ b/index.html
@@ -20,9 +20,16 @@
             <span id="quote"></span>
         </div>
         <!--Author-->
-        <div class="Author">
+        <div class="quote-author">
             <span id="author"></span>
         </div>
+        <!--Buttons-->
+      <div class="button-container">
+          <button class="twitter-button" id="twitter" title="Tweet This!">
+              <i class="fab fa-twitter"></i>
+          </button>
+          <button id="new-quote">New Quote</button>
+      </div>
     </div>
     <!-- Script -->
     <script src="quotes.js"></script>
