--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
           <button class="twitter-button" id="twitter" title="Tweet This!">
               <i class="fab fa-twitter"></i>
           </button>
+          <div class="tooltip">
+              <button id="cpy-clipboard">
+                  <span class="tooltip-text" id="clipboardTooltip">Copy to clipboard</span>
+                  <i class="fas fa-clipboard"></i>
+              </button>
+          </div>
           <button id="new-quote">New Quote</button>
       </div>
     </div>
