--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote Generator</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
     <link rel="icon" type="image/png" href="favicon.png">
     
 </head>
@@ -26,6 +26,7 @@
         <!--Buttons-->
       <div class="button-container">
           <button class="twitter-button" id="twitter" title="Tweet This!">
+              <span class="tooltip-text" id="twitterTooltip"></span>
               <i class="fab fa-twitter"></i>
           </button>
           <div class="tooltip">
